transpiler/compiler/parser/IsiLangParser.java
// Generated from transpiler/IsiLang.g4 by ANTLR 4.7.1
package compiler.parser;

    import java.util.HashSet;
    import java.util.ArrayList;
    import java.util.Stack;
    import compiler.exceptions.SemanticException;
    import compiler.datastructures.SymbolTable;
    import compiler.datastructures.Symbol;
    import compiler.datastructures.Variable;
    import compiler.ast.CommandRead;
    import compiler.ast.CommandWrite;
    import compiler.ast.CommandDecision;
    import compiler.ast.AbstractCommand;
    import compiler.ast.CommandAssignment;
    import compiler.ast.CommandSwitchCase;
    import compiler.ast.CommandSwitch;
    import compiler.ast.CommandLoop;
    import compiler.ast.Program;

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class IsiLangParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.7.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, T__19=20, T__20=21, T__21=22, T__22=23, T__23=24, 
		T__24=25, T__25=26, T__26=27, T__27=28, T__28=29, T__29=30, T__30=31, 
		T__31=32, Id=33, Num=34, Decimal=35, Inteiro=36, Texto=37, Espaco=38;
	public static final int
		RULE_prog = 0, RULE_declara = 1, RULE_criacaoVariavel = 2, RULE_bloco = 3, 
		RULE_cmd = 4, RULE_cmdLeitura = 5, RULE_cmdEscrita = 6, RULE_cmdIf = 7, 
		RULE_cmdEscolha = 8, RULE_caso = 9, RULE_cmdRepeticao = 10, RULE_cmdExpr = 11, 
		RULE_op_rel = 12, RULE_expr = 13, RULE_termo = 14, RULE_tipo = 15, RULE_op_mat = 16;
	public static final String[] ruleNames = {
		"prog", "declara", "criacaoVariavel", "bloco", "cmd", "cmdLeitura", "cmdEscrita", 
		"cmdIf", "cmdEscolha", "caso", "cmdRepeticao", "cmdExpr", "op_rel", "expr", 
		"termo", "tipo", "op_mat"
	};

	private static final String[] _LITERAL_NAMES = {
		null, "'programa'", "'fimprog.'", "'declare'", "','", "'.'", "'leia'", 
		"'('", "')'", "'escreva'", "'se'", "'entao'", "'{'", "'}'", "'senao'", 
		"'escolha'", "'caso'", "'enquanto'", "':='", "'<'", "'<='", "'>'", "'>='", 
		"'=='", "'!='", "'Inteiro'", "'Decimal'", "'Texto'", "'+'", "'-'", "'*'", 
		"'/'", "'**'"
	};
	private static final String[] _SYMBOLIC_NAMES = {
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, "Id", "Num", "Decimal", 
		"Inteiro", "Texto", "Espaco"
	};
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "IsiLang.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }


	    private int _variableType;
	    private String _variableName;
	    private String _variableValue;
	    private SymbolTable _symbolTable = new SymbolTable();
	    private HashSet<String> _usedVariables = new HashSet<String>();
	    private Program program = new Program();
	    private ArrayList<AbstractCommand> scopes;
	    private Stack<ArrayList<AbstractCommand>> scopeStack = new Stack<ArrayList<AbstractCommand>>();
	    private Stack<String> _exprDecisionStack = new Stack<String>();
	    private Stack<ArrayList<CommandSwitchCase>> _switchCaseStack = new Stack<ArrayList<CommandSwitchCase>>();
	    private String _readID;
		private String _writeID;
		private String _exprID;
		private String _exprContent;
	    private ArrayList<AbstractCommand> listTrue;
		private ArrayList<AbstractCommand> listFalse;

	    public void checkID(String id) {
	        if(!_symbolTable.contains(id)) {
	            throw new SemanticException("Undeclared variable: " + id);
	        }
	    }

	    public void generateCode(String pathOutput){
	        program.generateTarget(pathOutput);
	    }

	    public boolean checkTypes(String targetID, String ID){
	        boolean targetIsNum = hasType(targetID, Variable.INT) || hasType(targetID, Variable.DOUBLE);
	        boolean id = hasType(ID, Variable.INT) || hasType(ID, Variable.DOUBLE);

	        if(targetIsNum && id){
	            return true;
	        }

	        if(hasType(targetID, Variable.TEXT) && hasType(ID, Variable.TEXT)){
	            return true;
	        }

	        return false;
	    }

	    public boolean isOperator(char ch){
	        return ch == '+' || ch == '-' || ch == '*' || ch == '/';
	    }

	    public String getLastOperator(String expr){
	        int i = expr.length() - 1;
	        String lastOperator = "";   
	        while(i >= 0 && isOperator(expr.charAt(i))){
	            lastOperator = expr.charAt(i) + lastOperator;
	            i--;
	        }
	        return lastOperator;
	    }

	    public String replacePower(String exprContent, String currentId){
	        int i = exprContent.length() - 3;
	        String aux = "";
	        while(i >= 0 && !isOperator(exprContent.charAt(i))){
	            aux = exprContent.charAt(i) + aux;
	            i--;
	        }
	        return exprContent.replace(aux+"**", "") + String.format("Math.pow((double)%s, (double)%s)", aux, currentId);
	    }

	    public boolean hasType(String ID, int type){
	        return ((Variable)_symbolTable.get(ID)).getType() == type;
	    }

	public IsiLangParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class ProgContext extends ParserRuleContext {
		public DeclaraContext declara() {
			return getRuleContext(DeclaraContext.class,0);
		}
		public BlocoContext bloco() {
			return getRuleContext(BlocoContext.class,0);
		}
		public ProgContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_prog; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof IsiLangListener ) ((IsiLangListener)listener).enterProg(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof IsiLangListener ) ((IsiLangListener)listener).exitProg(this);
		}
	}

	public final ProgContext prog() throws RecognitionException {
		ProgContext _localctx = new ProgContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_prog);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(34);
			match(T__0);
			setState(35);
			declara();
			setState(36);
			bloco();
			setState(37);
			match(T__1);

			                program.setSymbolTable(_symbolTable);
			                program.setCommands(scopeStack.pop());
			                program.setUsedVariables(_usedVariables);
			            
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DeclaraContext extends ParserRuleContext {
		public List<CriacaoVariavelContext> criacaoVariavel() {
			return getRuleContexts(CriacaoVariavelContext.class);
		}
		public CriacaoVariavelContext criacaoVariavel(int i) {
			return getRuleContext(CriacaoVariavelContext.class,i);
		}
		public DeclaraContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_declara; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof IsiLangListener ) ((IsiLangListener)listener).enterDeclara(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof IsiLangListener ) ((IsiLangListener)listener).exitDeclara(this);
		}
	}

	public final DeclaraContext declara() throws RecognitionException {
		DeclaraContext _localctx = new DeclaraContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_declara);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(40);
			match(T__2);
			setState(41);
			criacaoVariavel();
			setState(46);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__3) {
				{
				{
				setState(42);
				match(T__3);
				setState(43);
				criacaoVariavel();
				}
				}
				setState(48);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(49);
			match(T__4);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class CriacaoVariavelContext extends ParserRuleContext {
		public TipoContext tipo() {
			return getRuleContext(TipoContext.class,0);
		}
		public TerminalNode Id() { return getToken(IsiLangParser.Id, 0); }
		public CriacaoVariavelContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_criacaoVariavel; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof IsiLangListener ) ((IsiLangListener)listener).enterCriacaoVariavel(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof IsiLangListener ) ((IsiLangListener)listener).exitCriacaoVariavel(this);
		}
	}

	public final CriacaoVariavelContext criacaoVariavel() throws RecognitionException {
		CriacaoVariavelContext _localctx = new CriacaoVariavelContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_criacaoVariavel);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(51);
			tipo();
			setState(52);
			match(Id);

			                        _variableName = _input.LT(-1).getText();
			                        _variableValue = null;
			                        if(_symbolTable.contains(_variableName)){
			                            throw new SemanticException("Variable " + _variableName + " already declared");
			                        }
			                        _symbolTable.add(new Variable(_variableName, _variableType, _variableValue));
			                    
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class BlocoContext extends ParserRuleContext {
		public List<CmdContext> cmd() {
			return getRuleContexts(CmdContext.class);
		}
		public CmdContext cmd(int i) {
			return getRuleContext(CmdContext.class,i);
		}
		public BlocoContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_bloco; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof IsiLangListener ) ((IsiLangListener)listener).enterBloco(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof IsiLangListener ) ((IsiLangListener)listener).exitBloco(this);
		}
	}

	public final BlocoContext bloco() throws RecognitionException {
		BlocoContext _localctx = new BlocoContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_bloco);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{

			                scopeStack.push(new ArrayList<AbstractCommand>());
			            
			setState(57); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(56);
				cmd();
				}
				}
				setState(59); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__5) | (1L << T__8) | (1L << T__9) | (1L << T__14) | (1L << T__16) | (1L << Id))) != 0) );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class CmdContext extends ParserRuleContext {
		public CmdLeituraContext cmdLeitura() {
			return getRuleContext(CmdLeituraContext.class,0);
		}
		public CmdEscritaContext cmdEscrita() {
			return getRuleContext(CmdEscritaContext.class,0);
		}
		public CmdExprContext cmdExpr() {
			return getRuleContext(CmdExprContext.class,0);
		}
		public CmdIfContext cmdIf() {
			return getRuleContext(CmdIfContext.class,0);
		}
		public CmdRepeticaoContext cmdRepeticao() {
			return getRuleContext(CmdRepeticaoContext.class,0);
		}
		public CmdEscolhaContext cmdEscolha() {
			return getRuleContext(CmdEscolhaContext.class,0);
		}
		public CmdContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_cmd; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof IsiLangListener ) ((IsiLangListener)listener).enterCmd(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof IsiLangListener ) ((IsiLangListener)listener).exitCmd(this);
		}
	}

	public final CmdContext cmd() throws RecognitionException {
		CmdContext _localctx = new CmdContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_cmd);
		try {
			setState(67);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__5:
				enterOuterAlt(_localctx, 1);
				{
				setState(61);
				cmdLeitura();
				}
				break;
			case T__8:
				enterOuterAlt(_localctx, 2);
				{
				setState(62);
				cmdEscrita();
				}
				break;
			case Id:
				enterOuterAlt(_localctx, 3);
				{
				setState(63);
				cmdExpr();
				}
				break;
			case T__9:
				enterOuterAlt(_localctx, 4);
				{
				setState(64);
				cmdIf();
				}
				break;
			case T__16:
				enterOuterAlt(_localctx, 5);
				{
				setState(65);
				cmdRepeticao();
				}
				break;
			case T__14:
				enterOuterAlt(_localctx, 6);
				{
				setState(66);
				cmdEscolha();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class CmdLeituraContext extends ParserRuleContext {
		public TerminalNode Id() { return getToken(IsiLangParser.Id, 0); }
		public CmdLeituraContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_cmdLeitura; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof IsiLangListener ) ((IsiLangListener)listener).enterCmdLeitura(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof IsiLangListener ) ((IsiLangListener)listener).exitCmdLeitura(this);
		}
	}

	public final CmdLeituraContext cmdLeitura() throws RecognitionException {
		CmdLeituraContext _localctx = new CmdLeituraContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_cmdLeitura);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(69);
			match(T__5);
			setState(70);
			match(T__6);
			setState(71);
			match(Id);
			   _readID = _input.LT(-1).getText();  
			setState(73);
			match(T__7);
			setState(74);
			match(T__4);

			                    checkID(_readID);
			                    _usedVariables.add(_readID);
			                    CommandRead cmd = new CommandRead(_readID, (Variable)_symbolTable.get(_readID));
			                    scopeStack.peek().add(cmd);
			                
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class CmdEscritaContext extends ParserRuleContext {
		public TerminalNode Texto() { return getToken(IsiLangParser.Texto, 0); }
		public TerminalNode Id() { return getToken(IsiLangParser.Id, 0); }
		public CmdEscritaContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_cmdEscrita; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof IsiLangListener ) ((IsiLangListener)listener).enterCmdEscrita(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof IsiLangListener ) ((IsiLangListener)listener).exitCmdEscrita(this);
		}
	}

	public final CmdEscritaContext cmdEscrita() throws RecognitionException {
		CmdEscritaContext _localctx = new CmdEscritaContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_cmdEscrita);
		try {
			setState(91);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,3,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(77);
				match(T__8);
				setState(78);
				match(T__6);
				setState(79);
				match(Texto);
				   _exprContent = _input.LT(-1).getText(); 
				setState(81);
				match(T__7);
				setState(82);
				match(T__4);

				                    scopeStack.peek().add(new CommandWrite(_exprContent));
				                
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(84);
				match(T__8);
				setState(85);
				match(T__6);
				setState(86);
				match(Id);
				   _readID = _input.LT(-1).getText();  
				setState(88);
				match(T__7);
				setState(89);
				match(T__4);

				                    checkID(_readID);
				                    scopeStack.peek().add(new CommandWrite(_readID));
				                
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class CmdIfContext extends ParserRuleContext {
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public List<CmdContext> cmd() {
			return getRuleContexts(CmdContext.class);
		}
		public CmdContext cmd(int i) {
			return getRuleContext(CmdContext.class,i);
		}
		public CmdIfContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_cmdIf; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof IsiLangListener ) ((IsiLangListener)listener).enterCmdIf(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof IsiLangListener ) ((IsiLangListener)listener).exitCmdIf(this);
		}
	}

	public final CmdIfContext cmdIf() throws RecognitionException {
		CmdIfContext _localctx = new CmdIfContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_cmdIf);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(93);
			match(T__9);

			                _exprID = null;
			                _exprContent = "";
			            
			setState(95);
			match(T__6);
			setState(96);
			expr();
			setState(97);
			match(T__7);
			setState(98);
			match(T__10);

			                _exprDecisionStack.push(_exprContent);
			                scopeStack.push(new ArrayList<AbstractCommand>()); 
			                listTrue = null;
			                listFalse = null;
			            
			setState(100);
			match(T__11);
			setState(102); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(101);
				cmd();
				}
				}
				setState(104); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__5) | (1L << T__8) | (1L << T__9) | (1L << T__14) | (1L << T__16) | (1L << Id))) != 0) );
			setState(106);
			match(T__12);
			setState(118);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==T__13) {
				{
				setState(107);
				match(T__13);
				   scopeStack.push(new ArrayList<AbstractCommand>());  
				setState(109);
				match(T__11);
				setState(111); 
				_errHandler.sync(this);
				_la = _input.LA(1);
				do {
					{
					{
					setState(110);
					cmd();
					}
					}
					setState(113); 
					_errHandler.sync(this);
					_la = _input.LA(1);
				} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__5) | (1L << T__8) | (1L << T__9) | (1L << T__14) | (1L << T__16) | (1L << Id))) != 0) );
				setState(115);
				match(T__12);

				                    listFalse = scopeStack.pop();
				                
				}
			}

			   
			                _exprContent = _exprDecisionStack.pop();
			                listTrue = scopeStack.pop();
			                CommandDecision cmd = new CommandDecision(_exprContent, listTrue, listFalse);
			                scopeStack.peek().add(cmd);
			                listTrue = null;
			                listFalse = null;
			            
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
